--- a/Views/Booking/Create.cshtml
+++ b/Views/Booking/Create.cshtml
@@ -35,9 +35,9 @@
                 <span asp-validation-for="SdtBooking" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="IDAcount" class="control-label"></label>
-                <input asp-for="IDAcount" class="form-control" />
-                <span asp-validation-for="IDAcount" class="text-danger"></span>
+                <label asp-for="IDAccount" class="control-label"></label>
+                <input asp-for="IDAccount" class="form-control" />
+                <span asp-validation-for="IDAccount" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="IDFood" class="control-label"></label>
