--- a/Views/Booking/Delete.cshtml
+++ b/Views/Booking/Delete.cshtml
@@ -37,10 +37,10 @@
             @Html.DisplayFor(model => model.SdtBooking)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IDAcount)
+            @Html.DisplayNameFor(model => model.IDAccount)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IDAcount)
+            @Html.DisplayFor(model => model.IDAccount)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IDFood)
