--- a/Views/Booking/Index.cshtml
+++ b/Views/Booking/Index.cshtml
@@ -28,7 +28,7 @@
                 @Html.DisplayNameFor(model => model.SdtBooking)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.IDAcount)
+                @Html.DisplayNameFor(model => model.IDAccount)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.IDFood)
@@ -49,7 +49,7 @@
                 @Html.DisplayFor(modelItem => item.SdtBooking)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.IDAcount)
+                @Html.DisplayFor(modelItem => item.IDAccount)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.IDFood)
