--- a/Views/Booking/Details.cshtml
+++ b/Views/Booking/Details.cshtml
@@ -24,22 +24,46 @@
             @Html.DisplayFor(model => model.IDTable)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.IDAccount)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.IDAccount)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.NameBooking)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.NameBooking)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.sdtBooking)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.sdtBooking)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Date)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Date)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Checkin)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Checkin)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Checkout)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Checkout)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.SdtBooking)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.SdtBooking)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IDAccount)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IDAccount)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IDFood)
