--- a/Views/Booking/Index.cshtml
+++ b/Views/Booking/Index.cshtml
@@ -22,13 +22,25 @@
                 @Html.DisplayNameFor(model => model.IDTable)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.IDAccount)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.NameBooking)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.SdtBooking)
+                @Html.DisplayNameFor(model => model.sdtBooking)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.IDAccount)
+                @Html.DisplayNameFor(model => model.Date)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Checkin)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Checkout)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.SdtBooking)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.IDFood)
@@ -43,13 +55,25 @@
                 @Html.DisplayFor(modelItem => item.IDTable)
             </td>
             <td>
+                @Html.DisplayFor(modelItem => item.IDAccount)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.NameBooking)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.SdtBooking)
+                @Html.DisplayFor(modelItem => item.sdtBooking)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.IDAccount)
+                @Html.DisplayFor(modelItem => item.Date)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Checkin)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Checkout)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.SdtBooking)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.IDFood)
