--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -38,41 +38,15 @@
 						<div class="col-md-6 text-right">
 							<div class="top_nav_right">
 								<ul class="top_nav_menu">
-
-									<!-- Currency / Language / My Account -->
-
-									<li class="currency">
-										<a href="#">
-											usd
-											<i class="fa fa-angle-down"></i>
-										</a>
-										<ul class="currency_selection">
-											<li><a href="#">cad</a></li>
-											<li><a href="#">aud</a></li>
-											<li><a href="#">eur</a></li>
-											<li><a href="#">gbp</a></li>
-										</ul>
-									</li>
-									<li class="language">
-										<a href="#">
-											English
-											<i class="fa fa-angle-down"></i>
-										</a>
-										<ul class="language_selection">
-											<li><a href="#">French</a></li>
-											<li><a href="#">Italian</a></li>
-											<li><a href="#">German</a></li>
-											<li><a href="#">Spanish</a></li>
-										</ul>
 									</li>
 									<li class="account">
-										<a href="Profile.html">
+										<a ">
 											My Account
 											<i class="fa fa-angle-down"></i>
 										</a>
 										<ul class="account_selection">
-											<li><a href="#"><i class="fa fa-sign-in" aria-hidden="true"></i>Sign In</a></li>
-											<li><a href="#"><i class="fa fa-user-plus" aria-hidden="true"></i>Register</a></li>
+											<li><a href="@Url.Action("Login","Account")"><i class="fa fa-sign-in" aria-hidden="true"></i>ĐĂNG NHẬP</a></li>
+											<li><a href="@Url.Action("Register", "Account")"><i class="fa fa-user-plus" aria-hidden="true"></i>ĐĂNG KÝ</a></li>
 										</ul>
 									</li>
 								</ul>
@@ -101,7 +75,7 @@
 								</ul>
 								<ul class="navbar_user">
 									<li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
-									<li><a href="Profile.html"><i class="fa fa-user" aria-hidden="true"></i></a></li>
+									<li><a href="@Url.Action("Profile", "Account")"><i class="fa fa-user" aria-hidden="true"></i></a></li>
 									<li class="checkout">
 										<a href="shoppingcart.html">
 											<i class="fa fa-shopping-cart" aria-hidden="true"></i>
