--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -3,7 +3,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Register">
+        <form asp-action="Register" asp-controller="Account">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="UserName" class="control-label"></label>
@@ -17,7 +17,7 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="ĐĂNG KÝ" class="btn btn-primary" />
-                Trở lại <a asp-action="Login">ĐĂNG NHẬP </a>
+                Trở lại <a asp-action="Login" asp-controller="Account">ĐĂNG NHẬP </a>
 
             </div>
 
