--- a/Views/Account/Index.cshtml
+++ b/Views/Account/Index.cshtml
@@ -22,7 +22,7 @@
                 @Html.DisplayNameFor(model => model.UserName)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Password)
+                @Html.DisplayNameFor(model => model.PassWord)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Role)
@@ -40,7 +40,7 @@
                 @Html.DisplayFor(modelItem => item.UserName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Password)
+                @Html.DisplayFor(modelItem => item.PassWord)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Role)
