--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -11,9 +11,9 @@
                 <span asp-validation-for="UserName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
+                <label asp-for="PassWord" class="control-label"></label>
+                <input asp-for="PassWord" class="form-control" />
+                <span asp-validation-for="PassWord" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="ĐĂNG NHẬP" class="btn btn-primary" />
