--- a/Views/Account/Delete.cshtml
+++ b/Views/Account/Delete.cshtml
@@ -36,12 +36,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Role)
         </dd>
-        <dt class = "col-sm-2">
+        @*<dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Img)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Img)
-        </dd>
+        </dd>*@
     </dl>
     
     <form asp-action="Delete">
