--- a/Views/Account/Details.cshtml
+++ b/Views/Account/Details.cshtml
@@ -35,12 +35,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Role)
         </dd>
-        <dt class = "col-sm-2">
+       @* <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Img)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Img)
-        </dd>
+        </dd>*@
     </dl>
 </div>
 <div>
