--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿
+@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -71,7 +72,7 @@
 									<li><a href="categories.html">menu</a></li>
 									<li><a href="Promotion.html">about us</a></li>
 									<li><a href="single.html">membership</a></li>
-									<li><a href="contact.html">contact</a></li>
+									<li><a href="@Url.Action("Contact", "Home")">Contact</a></li>
 								</ul>
 								<ul class="navbar_user">
 									<li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
@@ -79,7 +80,7 @@
 									<li class="checkout">
 										<a href="shoppingcart.html">
 											<i class="fa fa-shopping-cart" aria-hidden="true"></i>
-											<span id="checkout_items" class="checkout_items">3</span>
+											@*<span id="checkout_items" class="checkout_items"></span>*@
 										</a>
 									</li>
 								</ul>
@@ -201,187 +202,58 @@
 						</div>
 					</div>
 				</div>
+		
 				<div class="row align-items-center">
 					<div class="col text-center">
 						<div class="new_arrivals_sorting">
 							<ul class="arrivals_grid_sorting clearfix button-group filters-button-group">
-								<li class="grid_sorting_button button d-flex flex-column justify-content-center align-items-center active is-checked" data-filter="*">Món ngon nổi bật</li>
-								<li class="grid_sorting_button button d-flex flex-column justify-content-center align-items-center" data-filter=".women">Cuốn</li>
-								<li class="grid_sorting_button button d-flex flex-column justify-content-center align-items-center" data-filter=".accessories">Lẩu</li>
-								<li class="grid_sorting_button button d-flex flex-column justify-content-center align-items-center" data-filter=".men">Nướng</li>
-								<li class="grid_sorting_button button d-flex flex-column justify-content-center align-items-center" data-filter=".men">Món ăn nhẹ</li>
+								<li class="grid_sorting_button button d-flex flex-column justify-content-center align-items-center active is-checked" data-filter="*">Tất cả</li>
+													@foreach (var category in Model.Categories)
+													{
+									<li class="grid_sorting_button button d-flex flex-column justify-content-center align-items-center" data-filter=".category-@category.ID">@category.NameCategory</li>
+													}
 							</ul>
 						</div>
 					</div>
 				</div>
+
 				<div class="row">
 					<div class="col">
 						<div class="product-grid" data-isotope='{ "itemSelector": ".product-item", "layoutMode": "fitRows" }'>
-
-							<!-- Product 1 -->
-
-							<div class="product-item men">
-								<div class="product discount product_filter">
-									<div class="product_image">
-										<img src="~/Img/combo_1.jpg" alt="">
+							<!-- Sản phẩm -->
+												@foreach (var food in Model.Foods)
+												{
+								<div class="product-item category-@food.IDCategory">
+									<div class="product discount product_filter">
+										<div class="product_image">
+											<img src="~/Img/@food.ImgFood" alt="@food.NameFood" class="Custom-img">
+										</div>
+										<div class="favorite favorite_left"></div>
+										<div class="product_info">
+											<h6 class="product_name"><a href="single.html">@food.NameFood</a></h6>
+											<div>@food.Description</div>
+											<div class="product_price">$@food.PriceFood</div>
+										</div>
 									</div>
-									<div class="favorite favorite_left"></div>
-									<div class="product_bubble product_bubble_right product_bubble_red d-flex flex-column align-items-center"><span>-$20</span></div>
-									<div class="product_info">
-										<h6 class="product_name"><a href="single.html">Fujifilm X100T 16 MP Digital Camera (Silver)</a></h6>
-										<div class="product_price">$520.00<span>$590.00</span></div>
-									</div>
+									<div class="red_button add_to_cart_button"><a href="#">Thêm vào giỏ hàng</a></div>
 								</div>
-								<div class="red_button add_to_cart_button"><a href="#">add to cart</a></div>
-							</div>
+												}
+						</div>
+					</div>
+				</div>
 
-							<!-- Product 2 -->
+				<script>
+					// JavaScript để lọc sản phẩm theo danh mục khi người dùng chọn các nút lọc
+					$('.arrivals_grid_sorting li').on('click', function () {
+						var filterValue = $(this).attr('data-filter');
+						$('.product-grid').isotope({
+							filter: filterValue
+						});
+						$('.arrivals_grid_sorting li').removeClass('is-checked');
+						$(this).addClass('is-checked');
+					});
+				</script>
 
-							<div class="product-item women">
-								<div class="product product_filter">
-									<div class="product_image">
-										<img src="~/Img/combo_2.jpg" alt="">
-									</div>
-									<div class="favorite"></div>
-									<div class="product_bubble product_bubble_left product_bubble_green d-flex flex-column align-items-center"><span>new</span></div>
-									<div class="product_info">
-										<h6 class="product_name"><a href="single.html">Samsung CF591 Series Curved 27-Inch FHD Monitor</a></h6>
-										<div class="product_price">$610.00</div>
-									</div>
-								</div>
-								<div class="red_button add_to_cart_button"><a href="#">add to cart</a></div>
-							</div>
-
-							<!-- Product 3 -->
-
-							<div class="product-item women">
-								<div class="product product_filter">
-									<div class="product_image">
-										<img src="~/Img/combo_3.jpg" alt="">
-									</div>
-									<div class="favorite"></div>
-									<div class="product_info">
-										<h6 class="product_name"><a href="single.html">Blue Yeti USB Microphone Blackout Edition</a></h6>
-										<div class="product_price">$120.00</div>
-									</div>
-								</div>
-								<div class="red_button add_to_cart_button"><a href="#">add to cart</a></div>
-							</div>
-
-							<!-- Product 4 -->
-
-							<div class="product-item accessories">
-								<div class="product product_filter">
-									<div class="product_image">
-										<img src="~/Img/grill_1.jpg" alt="">
-									</div>
-									<div class="product_bubble product_bubble_right product_bubble_red d-flex flex-column align-items-center"><span>sale</span></div>
-									<div class="favorite favorite_left"></div>
-									<div class="product_info">
-										<h6 class="product_name"><a href="single.html">DYMO LabelWriter 450 Turbo Thermal Label Printer</a></h6>
-										<div class="product_price">$410.00</div>
-									</div>
-								</div>
-								<div class="red_button add_to_cart_button"><a href="#">add to cart</a></div>
-							</div>
-
-							<!-- Product 5 -->
-
-							<div class="product-item women men">
-								<div class="product product_filter">
-									<div class="product_image">
-										<img src="~/Img/grill_2.jpg" alt="">
-									</div>
-									<div class="favorite"></div>
-									<div class="product_info">
-										<h6 class="product_name"><a href="single.html">Pryma Headphones, Rose Gold & Grey</a></h6>
-										<div class="product_price">$180.00</div>
-									</div>
-								</div>
-								<div class="red_button add_to_cart_button"><a href="#">add to cart</a></div>
-							</div>
-
-							<!-- Product 6 -->
-
-							<div class="product-item accessories">
-								<div class="product discount product_filter">
-									<div class="product_image">
-										<img src="~/Img/grill_3.jpg" alt="">
-									</div>
-									<div class="favorite favorite_left"></div>
-									<div class="product_bubble product_bubble_right product_bubble_red d-flex flex-column align-items-center"><span>-$20</span></div>
-									<div class="product_info">
-										<h6 class="product_name"><a href="#single.html">Fujifilm X100T 16 MP Digital Camera (Silver)</a></h6>
-										<div class="product_price">$520.00<span>$590.00</span></div>
-									</div>
-								</div>
-								<div class="red_button add_to_cart_button"><a href="#">add to cart</a></div>
-							</div>
-
-							<!-- Product 7 -->
-
-							<div class="product-item women">
-								<div class="product product_filter">
-									<div class="product_image">
-										<img src="~/Img/seafood_1.jpg" alt="">
-									</div>
-									<div class="favorite"></div>
-									<div class="product_info">
-										<h6 class="product_name"><a href="single.html">Samsung CF591 Series Curved 27-Inch FHD Monitor</a></h6>
-										<div class="product_price">$610.00</div>
-									</div>
-								</div>
-								<div class="red_button add_to_cart_button"><a href="#">add to cart</a></div>
-							</div>
-
-							<!-- Product 8 -->
-
-							<div class="product-item accessories">
-								<div class="product product_filter">
-									<div class="product_image">
-										<img src="~/Img/seafood_2.jpg" alt="">
-									</div>
-									<div class="favorite"></div>
-									<div class="product_info">
-										<h6 class="product_name"><a href="single.html">Blue Yeti USB Microphone Blackout Edition</a></h6>
-										<div class="product_price">$120.00</div>
-									</div>
-								</div>
-								<div class="red_button add_to_cart_button"><a href="#">add to cart</a></div>
-							</div>
-
-							<!-- Product 9 -->
-
-							<div class="product-item men">
-								<div class="product product_filter">
-									<div class="product_image">
-										<img src="~/Img/seafood_3.jpg" alt="">
-									</div>
-									<div class="product_bubble product_bubble_right product_bubble_red d-flex flex-column align-items-center"><span>sale</span></div>
-									<div class="favorite favorite_left"></div>
-									<div class="product_info">
-										<h6 class="product_name"><a href="single.html">DYMO LabelWriter 450 Turbo Thermal Label Printer</a></h6>
-										<div class="product_price">$410.00</div>
-									</div>
-								</div>
-								<div class="red_button add_to_cart_button"><a href="#">add to cart</a></div>
-							</div>
-
-							<!-- Product 10 -->
-
-							<div class="product-item men">
-								<div class="product product_filter">
-									<div class="product_image">
-										<img src="~/Img/seafood_4.jpg" alt="">
-									</div>
-									<div class="favorite"></div>
-									<div class="product_info">
-										<h6 class="product_name"><a href="single.html">Pryma Headphones, Rose Gold & Grey</a></h6>
-										<div class="product_price">$180.00</div>
-									</div>
-								</div>
-								<div class="red_button add_to_cart_button"><a href="#">add to cart</a></div>
-							</div>
 						</div>
 					</div>
 				</div>
