--- a/Views/Table/BookingTable.cshtml
+++ b/Views/Table/BookingTable.cshtml
@@ -12,13 +12,13 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="ColoShop">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="~/styles/bootstrap4/bootstrap.min.css">
-	<link href="~/plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" type="text/css" href="~/plugins/OwlCarousel2-2.2.1/owl.carousel.css">
-<link rel="stylesheet" type="text/css" href="~/plugins/OwlCarousel2-2.2.1/owl.theme.default.css">
-<link rel="stylesheet" type="text/css" href="~/plugins/OwlCarousel2-2.2.1/animate.css">
-<link rel="stylesheet" type="text/css" href="~/styles/main_styles.css">
-<link rel="stylesheet" type="text/css" href="~/styles/responsive.css">
+<link rel="stylesheet" type="text/css" href="~/~/styles/bootstrap4/bootstrap.min.css">
+	<link href="~/~/plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" type="text/css" href="~/~/plugins/OwlCarousel2-2.2.1/owl.carousel.css">
+<link rel="stylesheet" type="text/css" href="~/~/plugins/OwlCarousel2-2.2.1/owl.theme.default.css">
+<link rel="stylesheet" type="text/css" href="~/~/plugins/OwlCarousel2-2.2.1/animate.css">
+<link rel="stylesheet" type="text/css" href="~/~/styles/main_styles.css">
+<link rel="stylesheet" type="text/css" href="~/~/styles/responsive.css">
 <style>
      body {
        font-family: Arial, sans-serif;
@@ -76,37 +76,37 @@
 								<!-- Currency / Language / My Account -->
 
 								<li class="currency">
-									<a href="#">
+									<a href="~/#">
 										usd
 										<i class="fa fa-angle-down"></i>
 									</a>
 									<ul class="currency_selection">
-										<li><a href="#">cad</a></li>
-										<li><a href="#">aud</a></li>
-										<li><a href="#">eur</a></li>
-										<li><a href="#">gbp</a></li>
+										<li><a href="~/#">cad</a></li>
+										<li><a href="~/#">aud</a></li>
+										<li><a href="~/#">eur</a></li>
+										<li><a href="~/#">gbp</a></li>
 									</ul>
 								</li>
 								<li class="language">
-									<a href="#">
+									<a href="~/#">
 										English
 										<i class="fa fa-angle-down"></i>
 									</a>
 									<ul class="language_selection">
-										<li><a href="#">French</a></li>
-										<li><a href="#">Italian</a></li>
-										<li><a href="#">German</a></li>
-										<li><a href="#">Spanish</a></li>
+										<li><a href="~/#">French</a></li>
+										<li><a href="~/#">Italian</a></li>
+										<li><a href="~/#">German</a></li>
+										<li><a href="~/#">Spanish</a></li>
 									</ul>
 								</li>
 								<li class="account">
-									<a href="Profile.html">
+									<a href="~/Profile.html">
 										My Account
 										<i class="fa fa-angle-down"></i>
 									</a>
 									<ul class="account_selection">
-										<li><a href="#"><i class="fa fa-sign-in" aria-hidden="true"></i>Sign In</a></li>
-										<li><a href="#"><i class="fa fa-user-plus" aria-hidden="true"></i>Register</a></li>
+										<li><a href="~/#"><i class="fa fa-sign-in" aria-hidden="true"></i>Sign In</a></li>
+										<li><a href="~/#"><i class="fa fa-user-plus" aria-hidden="true"></i>Register</a></li>
 									</ul>
 								</li>
 							</ul>
@@ -123,21 +123,21 @@
 				<div class="row">
 					<div class="col-lg-12 text-right">
 						<div class="logo_container">
-							<a href="#">Hanoi<span>Restaurant</span></a>
+							<a href="~/#">Hanoi<span>Restaurant</span></a>
 						</div>
 						<nav class="navbar">
 							<ul class="navbar_menu">
-								<li><a href="Index.html">home</a></li>
-								<li><a href="categories.html">menu</a></li>
-								<li><a href="Promotion.html">about us</a></li>
-								<li><a href="single.html">membership</a></li>
-								<li><a href="contact.html">contact</a></li>
+								<li><a href="~/Index.html">home</a></li>
+								<li><a href="~/categories.html">menu</a></li>
+								<li><a href="~/Promotion.html">about us</a></li>
+								<li><a href="~/single.html">membership</a></li>
+								<li><a href="~/contact.html">contact</a></li>
 							</ul>
 							<ul class="navbar_user">
-								<li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
-								<li><a href="Profile.html"><i class="fa fa-user" aria-hidden="true"></i></a></li>
+								<li><a href="~/#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
+								<li><a href="~/Profile.html"><i class="fa fa-user" aria-hidden="true"></i></a></li>
 								<li class="checkout">
-									<a href="shoppingcart.html">
+									<a href="~/shoppingcart.html">
 										<i class="fa fa-shopping-cart" aria-hidden="true" ></i>
 										<span id="checkout_items" class="checkout_items">3</span>
 									</a>
@@ -160,45 +160,45 @@
 		<div class="hamburger_menu_content text-right">
 			<ul class="menu_top_nav">
 				<li class="menu_item has-children">
-					<a href="#">
+					<a href="~/#">
 						usd
 						<i class="fa fa-angle-down"></i>
 					</a>
 					<ul class="menu_selection">
-						<li><a href="#">cad</a></li>
-						<li><a href="#">aud</a></li>
-						<li><a href="#">eur</a></li>
-						<li><a href="#">gbp</a></li>
+						<li><a href="~/#">cad</a></li>
+						<li><a href="~/#">aud</a></li>
+						<li><a href="~/#">eur</a></li>
+						<li><a href="~/#">gbp</a></li>
 					</ul>
 				</li>
 				<li class="menu_item has-children">
-					<a href="#">
+					<a href="~/#">
 						English
 						<i class="fa fa-angle-down"></i>
 					</a>
 					<ul class="menu_selection">
-						<li><a href="#">French</a></li>
-						<li><a href="#">Italian</a></li>
-						<li><a href="#">German</a></li>
-						<li><a href="#">Spanish</a></li>
+						<li><a href="~/#">French</a></li>
+						<li><a href="~/#">Italian</a></li>
+						<li><a href="~/#">German</a></li>
+						<li><a href="~/#">Spanish</a></li>
 					</ul>
 				</li>
 				<li class="menu_item has-children">
-					<a href="#">
+					<a href="~/#">
 						My Account
 						<i class="fa fa-angle-down"></i>
 					</a>
 					<ul class="menu_selection">
-						<li><a href="#"><i class="fa fa-sign-in" aria-hidden="true"></i>Sign In</a></li>
-						<li><a href="#"><i class="fa fa-user-plus" aria-hidden="true"></i>Register</a></li>
+						<li><a href="~/#"><i class="fa fa-sign-in" aria-hidden="true"></i>Sign In</a></li>
+						<li><a href="~/#"><i class="fa fa-user-plus" aria-hidden="true"></i>Register</a></li>
 					</ul>
 				</li>
-				<li><a href="Index.html">home</a></li>
-				<li><a href="categories.html">menu</a></li>
-				<li><a href="Promotion.html">about us</a></li>
-				<li><a href="single.html">membership</a></li>
-				<li><a href="contact.html">connect to us</a></li>
-				<li><a href="contact.html">contact</a></li>
+				<li><a href="~/Index.html">home</a></li>
+				<li><a href="~/categories.html">menu</a></li>
+				<li><a href="~/Promotion.html">about us</a></li>
+				<li><a href="~/single.html">membership</a></li>
+				<li><a href="~/contact.html">connect to us</a></li>
+				<li><a href="~/contact.html">contact</a></li>
 			</ul>
 		</div>
 	</div>
@@ -212,7 +212,7 @@
 					<div class="main_slider_content">
 						<h6>Chương trình hội viên Hanoi Restaurant</h6>
 						<h1>Get up to 30% Off </h1>
-						<div class="red_button shop_now_button"><a href="categories.html">shop now</a></div>
+						<div class="red_button shop_now_button"><a href="~/categories.html">shop now</a></div>
 					</div>
 				</div>
 			</div>
@@ -227,21 +227,21 @@
 				<div class="col-md-4">
 					<div class="banner_item align-items-center" style="background-image:url(Img/combo_1.jpg)">
 						<div class="banner_category">
-							<a href="Bandat.html">Đặt bàn</a>
+							<a href="~/Bandat.html">Đặt bàn</a>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="banner_item align-items-center" style="background-image:url(Img/combo_2.jpg)">
 						<div class="banner_category">
-							<a href="Datship.html">Đặt Ship</a>
+							<a href="~/Datship.html">Đặt Ship</a>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="banner_item align-items-center" style="background-image:url(Img/combo_3.jpg)">
 						<div class="banner_category">
-							<a href="Datship.html">Đặt tiệc tại gia</a>
+							<a href="~/Datship.html">Đặt tiệc tại gia</a>
 						</div>
 					</div>
 				</div>
@@ -338,20 +338,20 @@
 				<div class="col-lg-6">
 					<div class="footer_nav_container d-flex flex-sm-row flex-column align-items-center justify-content-lg-start justify-content-center text-center">
 						<ul class="footer_nav">
-							<li><a href="#">Blog</a></li>
-							<li><a href="#">FAQs</a></li>
-							<li><a href="contact.html">Contact us</a></li>
+							<li><a href="~/#">Blog</a></li>
+							<li><a href="~/#">FAQs</a></li>
+							<li><a href="~/contact.html">Contact us</a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="col-lg-6">
 					<div class="footer_social d-flex flex-row align-items-center justify-content-lg-end justify-content-center">
 						<ul>
-							<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-							<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-							<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-							<li><a href="#"><i class="fa fa-skype" aria-hidden="true"></i></a></li>
-							<li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+							<li><a href="~/#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+							<li><a href="~/#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+							<li><a href="~/#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+							<li><a href="~/#"><i class="fa fa-skype" aria-hidden="true"></i></a></li>
+							<li><a href="~/#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
 						</ul>
 					</div>
 				</div>
@@ -359,7 +359,7 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="footer_nav_container">
-						<div class="cr">©2018 All Rights Reserverd. Made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="#">Colorlib</a> &amp; distributed by <a href="https://themewagon.com">ThemeWagon</a></div>
+						<div class="cr">©2018 All Rights Reserverd. Made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="~/#">Colorlib</a> &amp; distributed by <a href="~/https://themewagon.com">ThemeWagon</a></div>
 					</div>
 				</div>
 			</div>
