--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -47,8 +47,8 @@
 											<i class="fa fa-angle-down"></i>
 										</a>
 										<ul class="account_selection">
-											<li><a href="#"><i class="fa fa-sign-in" aria-hidden="true"></i>Sign In</a></li>
-											<li><a href="#"><i class="fa fa-user-plus" aria-hidden="true"></i>Register</a></li>
+											<li><a href="@Url.Action("Login","Account")"><i class="fa fa-sign-in" aria-hidden="true"></i>ĐĂNG NHẬP</a></li>
+											<li><a href="@Url.Action("Register", "Account")"><i class="fa fa-user-plus" aria-hidden="true"></i>ĐĂNG KÝ</a></li>
 										</ul>
 									</li>
 								</ul>
@@ -65,15 +65,14 @@
 					<div class="row">
 						<div class="col-lg-12 text-right">
 							<div class="logo_container">
-								<a href="#">Hanoi<span>Restaurant</span></a>
+								<a href="@Url.Action("Index", "Home")">Hanoi<span>Restaurant</span></a>
 							</div>
 							<nav class="navbar">
 								<ul class="navbar_menu">
-									<li><a href="index.html">home</a></li>
+									<li><a href="@Url.Action("Index", "Home")">Home</a></li>
 									<li><a href="categories.html">shop</a></li>
-									<li><a href="Promotion.html">promotion</a></li>
 									<li><a href="single.html">Single Product</a></li>
-									<li><a href="contact.html">contact</a></li>
+									<li><a href="@Url.Action("Contact", "Home")">Contact</a></li>
 								</ul>
 								<ul class="navbar_user">
 									<li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
@@ -106,11 +105,10 @@
 				<ul class="menu_top_nav">
 					<li class="menu_item has-children">
 					</li>
-					<li class="menu_item"><a href="#">home</a></li>
+					<li class="menu_item"><a href="@Url.Action("Index", "Home")">Home</a></li>
 					<li class="menu_item"><a href="#">shop</a></li>
-					<li class="menu_item"><a href="#">promotion</a></li>
 					<li class="menu_item"><a href="#">single product</a></li>
-					<li class="menu_item"><a href="#">contact</a></li>
+					<li class="menu_item"><a href="@Url.Action("Contact", "Home")">Contact</a></li>
 				</ul>
 			</div>
 		</div>
