--- a/Views/Booking/Create.cshtml
+++ b/Views/Booking/Create.cshtml
@@ -25,19 +25,34 @@
                 <span asp-validation-for="IDTable" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="IDAccount" class="control-label"></label>
+                <input asp-for="IDAccount" class="form-control" />
+                <span asp-validation-for="IDAccount" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="NameBooking" class="control-label"></label>
                 <input asp-for="NameBooking" class="form-control" />
                 <span asp-validation-for="NameBooking" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SdtBooking" class="control-label"></label>
-                <input asp-for="SdtBooking" class="form-control" />
-                <span asp-validation-for="SdtBooking" class="text-danger"></span>
+                <label asp-for="sdtBooking" class="control-label"></label>
+                <input asp-for="sdtBooking" class="form-control" />
+                <span asp-validation-for="sdtBooking" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="IDAccount" class="control-label"></label>
-                <input asp-for="IDAccount" class="form-control" />
-                <span asp-validation-for="IDAccount" class="text-danger"></span>
+                <label asp-for="Date" class="control-label"></label>
+                <input asp-for="Date" class="form-control" />
+                <span asp-validation-for="Date" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Checkin" class="control-label"></label>
+                <input asp-for="Checkin" class="form-control" />
+                <span asp-validation-for="Checkin" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Checkout" class="control-label"></label>
+                <input asp-for="Checkout" class="form-control" />
+                <span asp-validation-for="Checkout" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="IDFood" class="control-label"></label>
